OpenLDAP 2.3 Change Log

OpenLDAP 2.3.17 Engineering
	Fixed slapd-ldap/meta session reuse issue (ITS#4315)
	Fixed slapd-monitor thread issue (ITS#4318)
	Build environment
		Fixed configure report-to URL

OpenLDAP 2.3.16 Release
	Fixed slapd-bdb reindexing via cn=config not noticed issue (ITS#4260)
	Fixed slapd-monitor connection search crash (ITS#4300)
	Flapd slapd cn=config bad ACL syntax modify crash (ITS#4306)
	Fixed slapd ACL/suffix configuration issue (ITS#4307)
	Fixed slapd-bdb/hdb cache issue (ITS#4308)
	Fixed slapd-bdb/hdb/ldbm suffix add with default referral issue (ITS#4310)
	Fixed slapd-ldbm compare cache release issue (ITS#4313)
	Fixed slapd syncrepl time/size limit parsing
	Fixed slapi slapi_op_bind_callback fix (ITS#4311)
	Fixed slapi pluginlog fix (ITS#4291)
	Fixed ldapsearch response control handling issue
	Build environment
		Replace sched_yield(2) on Linux with select(2) (ITS#3950)
	Documentation
		Added slapd-bdb(5) cachefree description
		Updated misc. manual pages

OpenLDAP 2.3.15 Release
	Fixed slapd strerror logging bug (ITS#4292)
	Fixed slapd ACL add/delete fraction issue (ITS#4295)
	Fixed slapd ACL users selfwrite issue (ITS#4299)
	Fixed slapd attrs/objectclass replog issues (ITS#4298)
	Fixed slapd-ldap password modify exop password return (ITS#4294)
	Build environment
		Disable test030-relay when threads are unavailable (ITS#4297)

OpenLDAP 2.3.14 Release
	Fixed slapd assertion control restrictions
	Fixed slapd sc_prev update after free bug (ITS#4237)
	Fixed slapd pid file creation (ITS#4241,4251)
	Fixed slapd DEBUG dependency (ITS#4245)
	Added slapd warning for excessive threads number (ITS#4249)
	Fixed slapd passwd incomplete mod structure issue (ITS#4278)
	Fixed slapd ACL exact attrval clause normalization (ITS#4255)
	Fixed slapd modify/delete by ordered index issue
	Fixed slapd strerror NULL bug (ITS#4285)
	Fixed slapd-glue issues (ITS#4084,4133)
	Fixed slapd-hdb idl Delete bug (ITS#4250)
	Fixed slapd-hdb cache deadlock (ITS#4254)